# gDel3D

./: CMakeLists.txt  README.md  gdel3d_colab.ipynb
GDelFlipping/src/: Demo.cpp  EdgesDelaunay3D.cpp
GDelFlipping/src/gDel3D/CPU/: PredWrapper.cpp
GDelFlipping/src/gDel3D/GPU/: CudaWrapper.h  GPUDecl.h  KerPredicates.cu  ThrustWrapper.cu
